--- a/src/errors/CMakeLists.txt
+++ b/src/errors/CMakeLists.txt
@@ -4,12 +4,8 @@ set(TARGET_SOURCES
     "errors.c"
 )
 
-set(TARGET_HEADERS
-    "include/errors.h"
-)
-
-add_library(${TARGET_NAME}
-    STATIC ${TARGET_SOURCES} ${TARGET_HEADERS}
+add_library(${TARGET_NAME} STATIC
+    ${TARGET_SOURCES}
 )
 
 target_include_directories(${TARGET_NAME}
