Add clang-tidy and other updates

--- a/src/errors/CMakeLists.txt
+++ b/src/errors/CMakeLists.txt
@@ -11,3 +11,5 @@ add_library(${TARGET_NAME} STATIC
 target_include_directories(${TARGET_NAME}
     PUBLIC "include" ${INCLUDE_DIRECTORIES_TO_PROPAGATE}
 )
+
+set_target_c_compiler_flags(${TARGET_NAME})
