--- a/.github/workflows/cross-platform-build-and-test.yml
+++ b/.github/workflows/cross-platform-build-and-test.yml
@@ -3,38 +3,74 @@ name: Cross-Platform Build and Test
 on: [workflow_dispatch, pull_request]
 
 jobs:
-  linux-debug:
+  linux-debug-sanitized:
     uses: ./.github/workflows/generic-jobs.yml
     with:
       os: ubuntu-latest
-      build_type: debug
+      build_type: debug-sanitized
 
-  linux-release:
+  linux-debug-nonsanitized:
     uses: ./.github/workflows/generic-jobs.yml
     with:
       os: ubuntu-latest
-      build_type: release
+      build_type: debug-nonsanitized
 
-  windows-debug:
+  linux-release-sanitized:
+    uses: ./.github/workflows/generic-jobs.yml
+    with:
+      os: ubuntu-latest
+      build_type: release-sanitized
+
+  linux-release-nonsanitized:
+    uses: ./.github/workflows/generic-jobs.yml
+    with:
+      os: ubuntu-latest
+      build_type: release-nonsanitized
+
+  windows-debug-sanitized:
     uses: ./.github/workflows/generic-jobs.yml
     with:
       os: windows-latest
-      build_type: debug
+      build_type: debug-sanitized
 
-  windows-release:
+  windows-debug-nonsanitized:
     uses: ./.github/workflows/generic-jobs.yml
     with:
       os: windows-latest
-      build_type: release
+      build_type: debug-nonsanitized
 
-  macos-debug:
+  windows-release-sanitized:
+    uses: ./.github/workflows/generic-jobs.yml
+    with:
+      os: windows-latest
+      build_type: release-sanitized
+
+  windows-release-nonsanitized:
+    uses: ./.github/workflows/generic-jobs.yml
+    with:
+      os: windows-latest
+      build_type: release-nonsanitized
+
+  macos-debug-sanitized:
     uses: ./.github/workflows/generic-jobs.yml
     with:
       os: macos-latest
-      build_type: debug
+      build_type: debug-sanitized
 
-  macos-release:
+  macos-debug-nonsanitized:
     uses: ./.github/workflows/generic-jobs.yml
     with:
       os: macos-latest
-      build_type: release
+      build_type: debug-nonsanitized
+
+  macos-release-sanitized:
+    uses: ./.github/workflows/generic-jobs.yml
+    with:
+      os: macos-latest
+      build_type: release-sanitized
+
+  macos-release-nonsanitized:
+    uses: ./.github/workflows/generic-jobs.yml
+    with:
+      os: macos-latest
+      build_type: release-nonsanitized
